# Workshop_CICD

./: CMakeLists.txt
.github/workflows/: cmake.yml
sources/: HelloWorld.cpp  main.cpp
tests/: tests.cpp
